--- a/gestipc/core/templates/core/style.j2
+++ b/gestipc/core/templates/core/style.j2
@@ -167,7 +167,7 @@
 
   <header>
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="{% static "/assets/brand/pc-logo.svg" %}" width="35" height="35" alt="">
