--- a/gestipc/core/templates/core/style.html
+++ b/gestipc/core/templates/core/style.html
@@ -182,7 +182,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Volontari</a>
+              <a class="nav-link" href="/hr">Volontari</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Magazzino</a>
@@ -195,6 +195,7 @@
 
   <!-- Begin page content -->
   <main class="flex-shrink-0">
+    {% block body %}
     <div class="container">
       <h1 class="mt-5">Sticky footer with fixed navbar</h1>
       <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A
@@ -202,6 +203,7 @@
           class="small">main &gt; .container</code>.</p>
       <p>Back to <a href="../examples/sticky-footer/">the default sticky footer</a> minus the navbar.</p>
     </div>
+    {% endblock %}
   </main>
 
   <footer class="footer mt-auto py-3 bg-body-tertiary">
