Pretty user table

--- a/gestipc/core/templates/core/style.html
+++ b/gestipc/core/templates/core/style.html
@@ -14,6 +14,7 @@
   <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sticky-footer-navbar/">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
   <link href="{% static 'assets/dist/css/bootstrap.css' %}" rel="stylesheet">
+  <link href="{% static 'assets/dist/css/pc.css' %}" rel="stylesheet">
 
   <style>
     .bd-placeholder-img {
