--- a/gestipc/hr/templates/hr/main.html
+++ b/gestipc/hr/templates/hr/main.html
@@ -1,11 +1,34 @@
 {% extends 'core/style.html' %}
 
+{% load static %}
+
 {% block body %}
 <div class="container">
   <h1 class="mt-5">Lista volontari</h1>
-  <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A
-    fixed navbar has been added with <code class="small">padding-top: 60px;</code> on the <code
-      class="small">main &gt; .container</code>.</p>
-  <p>Back to <a href="../examples/sticky-footer/">the default sticky footer</a> minus the navbar.</p>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col"></th>
+        <th scope="col">Nome</th>
+        <th scope="col">Cognome</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for volontario in users %}
+      <tr>
+        <th scope="row">
+          <img class="profile-picture" src="{% static volontario.profile.profile_picture %}" alt="Avatar"> 
+        </th>
+        <td>{{volontario.first_name}}</td>
+        <td>{{volontario.last_name}}</td>
+        <td><a class="btn btn-primary" href="/hr/user{{volontario.id}}">Profilo</a></td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+
+
 </div>
 {% endblock body %}%}
