--- a/gestipc/core/templates/core/style.html
+++ b/gestipc/core/templates/core/style.html
@@ -188,6 +188,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Magazzino</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/servizio">Servizi</a>
+            </li>
           </ul>
         </div>
       </div>
