--- a/gestipc/servizio/templates/servizio/main.html
+++ b/gestipc/servizio/templates/servizio/main.html
@@ -10,10 +10,10 @@
   <table class="table">
     <thead>
       <tr>
+        <th scope="col"></th>
         <th scope="col">Data</th>
         <th scope="col">Luogo</th>
-        <th scope="col">Stato</th>
-        <th scope="col">Presenze</th>
+        <th scope="col">Presenti/Risposte</th>
       </tr>
     </thead>
     <tbody>
@@ -22,9 +22,9 @@
         <th scope="row">
           <a href="/hr/servizio/{{servizio.id}}">{{servizio.id}}</a>
         </th>
-        <td>{{servizio.luogo}}</td>
-        <td>{{servizio.stato}}</td>
-        <td>{{servizio.presenti}}</td>
+        <td>{{servizio.begin_date}}</td>
+        <td>{{servizio.location}}</td>
+        <td>{{servizio.total_acks}} / {{servizio.total_response}}
       </tr>
       {% endfor %}
     </tbody>
