Servizio detail page

--- a/gestipc/servizio/templates/servizio/main.html
+++ b/gestipc/servizio/templates/servizio/main.html
@@ -20,7 +20,7 @@
       {% for servizio in servizi %}
       <tr>
         <th scope="row">
-          <a href="/hr/servizio/{{servizio.id}}">{{servizio.id}}</a>
+          <a href="/servizio/{{servizio.id}}">{{servizio.id}}</a>
         </th>
         <td>{{servizio.begin_date}}</td>
         <td>{{servizio.location}}</td>
