--- a/gestipc/hr/templates/hr/main.html
+++ b/gestipc/hr/templates/hr/main.html
@@ -4,9 +4,7 @@
 
 {% block body %}
 <div class="container">
-  <h1 class="my-5">Lista volontari
-    <a href="/hr/user/new" class="btn btn-success floatright">Crea utente</a>
-  </h1>
+  <h1 class="my-5">Lista volontari</h1>
   <table class="table">
     <thead>
       <tr>
