--- a/gestipc/core/templates/core/style.html
+++ b/gestipc/core/templates/core/style.html
@@ -180,20 +180,20 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link {% if curpage == " volontari" %}active{% endif %}" href="/hr">Volontari</a>
+              <a class="nav-link {% if curpage == "volontari" %}active{% endif %}" href="/hr">Volontari</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link {% if curpage == " magazzino" %}active{% endif %}" href="/magazzino">Magazzino</a>
+              <a class="nav-link {% if curpage == "magazzino" %}active{% endif %}" href="/magazzino">Magazzino</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link {% if curpage == " servizi" %}active{% endif %}" href="/servizio">Servizi</a>
+              <a class="nav-link {% if curpage == "servizi" %}active{% endif %}" href="/servizio">Servizi</a>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <div class="dropdown">
-              <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                {{user}}
-              </button>
+              <a class="nav-link dropdown-toggle active" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <img class="profile-picture-small mx-3" src="{% static user.profile.profile_picture %}" alt="Avatar"> {{user.first_name}} {{user.last_name}}
+              </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="/accounts/logout">Esci</a></li>
               </ul>
