--- a/gestipc/servizio/templates/servizio/main.html
+++ b/gestipc/servizio/templates/servizio/main.html
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container">
   <h1 class="my-5">Servizi
-    <a href="/hr/user/new" class="btn btn-success floatright">Crea servizio</a>
+    <a href="/servizio/new" class="btn btn-success floatright">Crea servizio</a>
   </h1>
   <table class="table">
     <thead>
