--- a/gestipc/hr/templates/hr/tg_link_success.html
+++ b/gestipc/hr/templates/hr/tg_link_success.html
@@ -4,8 +4,8 @@
 
 {% block body %}
 <div class="container">
-    <div class="alert alert-danger my-5" role="alert">
-        Link non valido!
+    <div class="alert alert-success my-5" role="alert">
+        Account collegato correttamente!
     </div>      
 </div>
 {% endblock body %}
