--- a/gestipc/core/templates/core/style.html
+++ b/gestipc/core/templates/core/style.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load django_bootstrap5 %}
 <!doctype html>
 <html lang="en" class="h-100" data-bs-theme="auto">
 
@@ -11,6 +12,7 @@
   <meta name="generator" content="Hugo 0.115.4">
   <title>Sticky Footer Navbar Template · Bootstrap v5.3</title>
 
+  {% bootstrap_messages %}
   <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sticky-footer-navbar/">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
   <link href="{% static 'assets/dist/css/bootstrap.css' %}" rel="stylesheet">
