--- a/gestipc/hr/templates/hr/profile.html
+++ b/gestipc/hr/templates/hr/profile.html
@@ -8,7 +8,7 @@
 <div class="container">
   <div class="container py-5">
     <div class="row row-cols-1 row-cols-lg-2">
-      <div class="col col-12 col-lg-3"><img class="profile-picture" src="{% static user.profile.profile_picture %}" alt="Avatar"></div>
+      <div class="col col-12 col-lg-3"><img class="profile-picture-big" src="{% static user.profile.profile_picture %}" alt="Avatar"></div>
       <div class="col col-12 col-lg-9 d-flex flex-column">
         <div class="px-3"><h1>{{user.last_name}} {{user.first_name}}</h1></div>
         <div class="px-3"><h4>{{user.profile.address}}</h4></div>
