--- a/gestipc/core/templates/core/style.html
+++ b/gestipc/core/templates/core/style.html
@@ -15,6 +15,8 @@
   {% bootstrap_messages %}
   <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sticky-footer-navbar/">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+  <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
+  <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'assets/dist/css/bootstrap.css' %}" rel="stylesheet">
   <link href="{% static 'assets/dist/css/pc.css' %}" rel="stylesheet">
 
