--- a/gestipc/hr/templates/hr/profile.html
+++ b/gestipc/hr/templates/hr/profile.html
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <div class="fs-2 mb-5">Dati personali</div>
+  <div class="fs-2 my-3">Dati personali</div>
   
   <div class="container user-profile">
     <div class="row g-4 py-2 row-cols-1 row-cols-lg-2">
@@ -30,7 +30,7 @@
     </div>
   </div>
 
-  <div class="fs-2 mb-5">Attrezzatura</div>
+  <div class="fs-2 mt-5">Attrezzatura</div>
 
   <table class="table">
     <thead>
