--- a/gestipc/core/templates/registration/login.html
+++ b/gestipc/core/templates/registration/login.html
@@ -170,7 +170,7 @@
   <main class="form-signin w-100 m-auto">
     <form method="post">{% csrf_token %}
       <img class="mb-4" src="{% static '/assets/brand/pc-logo.svg' %}" alt="" width="150" height="150">
-      <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+      <h1 class="h3 mb-3 fw-normal">Login</h1>
 
       <div class="form-floating">
         <input type="text" class="form-control" id="floatingInput" name="username" placeholder="n.cognome">
@@ -181,8 +181,8 @@
         placeholder="Password">
         <label for="floatingPassword">Password</label>
       </div>
-      <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
-      <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2023</p>
+      <button class="btn btn-primary w-100 py-2" type="submit">Vai</button>
+      <p class="mt-5 mb-3 text-body-secondary">&copy; Gestio-PC 2023</p>
     </form>
   </main>
   <script src="{% static '/assets/dist/js/bootstrap.bundle.min.js' %}"></script>
