Add warehouse module

--- a/gestipc/core/templates/core/style.html
+++ b/gestipc/core/templates/core/style.html
@@ -187,7 +187,7 @@
               <a class="nav-link {% if curpage == "volontari" %}active{% endif %}" href="/hr">Volontari</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link {% if curpage == "magazzino" %}active{% endif %}" href="/magazzino">Magazzino</a>
+              <a class="nav-link {% if curpage == "warehouse" %}active{% endif %}" href="/warehouse">Magazzino</a>
             </li>
             <li class="nav-item">
               <a class="nav-link {% if curpage == "servizi" %}active{% endif %}" href="/servizio">Servizi</a>
