Link to item creation page

--- a/gestipc/warehouse/templates/warehouse/main.html
+++ b/gestipc/warehouse/templates/warehouse/main.html
@@ -6,6 +6,9 @@
 {% block body %}
 <div class="container">
   <h1 class="my-5">Gestione Magazzino</h1>
+  <div class="row my-2">
+    <a href="new" class="col-12 col-md-2 btn btn-primary">Aggiungi oggetto</a>
+  </div>
   <table class="table">
     <thead>
       <tr>
