--- a/gestipc/servizio/templates/servizio/new.html
+++ b/gestipc/servizio/templates/servizio/new.html
@@ -1,4 +1,4 @@
-{% extends 'core/style.html' %}
+{% extends "core/style.html" %}
 
 {% load static %}
 
@@ -25,7 +25,6 @@
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
-
 
 </div>
 {% endblock body %}
