--- a/gestipc/core/templates/registration/login.html
+++ b/gestipc/core/templates/registration/login.html
@@ -6,6 +6,7 @@
   <script src="{% static '/assets/js/color-modes.js' %}"></script>
 
   <meta charset="utf-8">
+  <meta name="keywords" content="protezione,civile,login">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
@@ -166,7 +167,6 @@
     </ul>
   </div>
 
-
   <main class="form-signin w-100 m-auto">
     <form method="post">{% csrf_token %}
       <img class="mb-4" src="{% static '/assets/brand/pc-logo.svg' %}" alt="" width="150" height="150">
@@ -182,7 +182,7 @@
         <label for="floatingPassword">Password</label>
       </div>
       <button class="btn btn-primary w-100 py-2" type="submit">Vai</button>
-      <p class="mt-5 mb-3 text-body-secondary">&copy; Gestio-PC 2023</p>
+      <p class="mt-5 mb-3 text-body-secondary">© <a href="https://github.com/icovada">icovada<a>, 2023</p>
     </form>
   </main>
   <script src="{% static '/assets/dist/js/bootstrap.bundle.min.js' %}"></script>
