--- a/gestipc/hr/templates/hr/profile.html
+++ b/gestipc/hr/templates/hr/profile.html
@@ -1,4 +1,4 @@
-{% extends 'core/style.html' %}
+{% extends "core/style.html" %}
 {% load django_bootstrap5 %}
 
 {% load static %}
@@ -10,21 +10,21 @@
     <div class="row row-cols-1 row-cols-lg-2">
       <div class="col col-12 col-lg-3"><img class="profile-picture-big" src="{% static user.profile.profile_picture %}" alt="Avatar"></div>
       <div class="col col-12 col-lg-9 d-flex flex-column">
-        <div class="px-3"><h1>{{user.last_name}} {{user.first_name}}</h1></div>
-        <div class="px-3"><h4>{{user.profile.address}}</h4></div>
-        <div class="px-3"><a href="tel:{{user.profile.phone_number}}">{{user.profile.phone_number}}</a></div>
+        <div class="px-3"><h1>{{ user.last_name }} {{ user.first_name }}</h1></div>
+        <div class="px-3"><h4>{{ user.profile.address }}</h4></div>
+        <div class="px-3"><a href="tel:{{ user.profile.phone_number }}">{{ user.profile.phone_number }}</a></div>
       </div>
     </div>
   </div>
 
   <div class="fs-2 my-3">Dati personali</div>
-  
+
   <div class="container user-profile">
     <div class="row g-4 py-2 row-cols-1 row-cols-lg-2">
       {% for key, value in profile.items %}
       <div class="feature col">
-        <h3 class="fs-4 text-body-emphasis">{{key}}</h3>
-        <p>{{value}}</p>
+        <h3 class="fs-4 text-body-emphasis">{{ key }}</h3>
+        <p>{{ value }}</p>
       </div>
       {% endfor %}
     </div>
@@ -42,7 +42,7 @@
     <tbody>
       {% for x in equipment %}
       <tr>
-        <td>{{x.0}}</td>
+        <td>{{ x.0 }}</td>
         {% if x.1 %}
         <td class=><div class="fa fa-check fw-bolder fs-5 text-success"></td>
         {% else %}
