--- a/gestipc/hr/templates/hr/tg_link_invalid.html
+++ b/gestipc/hr/templates/hr/tg_link_invalid.html
@@ -1,4 +1,4 @@
-{% extends 'core/style.html' %}
+{% extends "core/style.html" %}
 
 {% load static %}
 
@@ -6,6 +6,6 @@
 <div class="container">
     <div class="alert alert-danger my-5" role="alert">
         Link non valido!
-    </div>      
+    </div>
 </div>
 {% endblock body %}
