--- a/gestipc/warehouse/templates/warehouse/main.html
+++ b/gestipc/warehouse/templates/warehouse/main.html
@@ -1,4 +1,4 @@
-{% extends 'core/style.html' %}
+{% extends "core/style.html" %}
 
 {% load static %}
 {% load my_filters %}
@@ -7,7 +7,7 @@
 <div class="container">
   <h1 class="my-5">Gestione Magazzino</h1>
   <div class="row my-2">
-    <a href="new" class="col-12 col-md-2 btn btn-primary">Aggiungi oggetto</a>
+    <a href="{% url 'warehouse:item_create' %}" class="col-12 col-md-2 btn btn-primary">Aggiungi oggetto</a>
   </div>
   <table class="table">
     <thead>
@@ -23,26 +23,25 @@
       {% for item in warehouse_items %}
       <tr>
         <th scope="row">
-          <a href="/warehouse/item/{{item.id}}/">{% if item.picture %}<img class="profile-picture" src="{% static item.picture %}" alt="Avatar">
+          <a href="{% url 'warehouse:item_detail' %}">{% if item.picture %}<img class="profile-picture" src="{% static item.picture %}" alt="Avatar">
           {% else %}
           <i class="fa-solid fa-camera fa-xl"></i>
           {% endif %}
           </a>
         </th>
-        
-        <td>{{item.kind}}</td>
-        <td>{{item.brand}}</td>
-        <td>{{item.model}}</td>
+
+        <td>{{ item.kind }}</td>
+        <td>{{ item.brand }}</td>
+        <td>{{ item.model }}</td>
         <td>
         {% for i in item.conditions|times %}
-        <i class="fa-solid fa-star fa-sm" style="color: #e01b24;"></i>
+        <i class="fa-solid fa-star fa-sm text-danger"></i>
         {% endfor %}
         </td>
       </tr>
       {% endfor %}
     </tbody>
   </table>
-
 
 </div>
 {% endblock body %}
