--- a/gestipc/servizio/templates/servizio/main.html
+++ b/gestipc/servizio/templates/servizio/main.html
@@ -24,7 +24,7 @@
         </th>
         <td>{{ servizio.begin_date }}</td>
         <td>{{ servizio.location }}</td>
-        <td>{{ servizio.total_acks }} / {{ servizio.total_response }}
+        <td>{{ servizio.total_acks }} / {{ servizio.total_responses }}
       </tr>
       {% endfor %}
     </tbody>
