Add certificazioni submodule

--- a/gestipc/core/templates/core/style.html
+++ b/gestipc/core/templates/core/style.html
@@ -187,6 +187,9 @@
               <a class="nav-link {% if curpage == "volontari" %}active{% endif %}" href="{% url 'hr:home' %}">Volontari</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link {% if curpage == "certifications" %}active{% endif %}" href="{% url 'certifications:home' %}">Certificazioni</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link {% if curpage == "warehouse" %}active{% endif %}" href="{% url 'warehouse:home' %}">Magazzino</a>
             </li>
             <li class="nav-item">
